Fixed some spacing issues, added more buffs

--- a/v1/css/app.css
+++ b/v1/css/app.css
@@ -5,6 +5,7 @@ body {
 
 .buff {
   margin-left:0px;
+  margin-bottom:10px;
 }
 
 .table {
